; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_67.c_connect_to_host.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_67.c_connect_to_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64* }
%struct.sockaddr_in = type { i32, %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i64 }
%struct.sockaddr = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@SOCKET_ERR = common dso_local global i32 0, align 4
@hostStruct = common dso_local global %struct.TYPE_4__* null, align 8
@CONNECT_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @connect_to_host(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockaddr_in, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @AF_INET, align 4
  %7 = load i32, i32* @SOCK_STREAM, align 4
  %8 = load i32, i32* @IPPROTO_TCP, align 4
  %9 = call i32 @socket(i32 %6, i32 %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @SOCKET_ERR, align 4
  store i32 %12, i32* %2, align 4
  br label %40

13:                                               ; preds = %1
  %14 = bitcast %struct.sockaddr_in* %5 to i8*
  %15 = call i32 @memset(i8* %14, i32 0, i32 24)
  %16 = load i32, i32* @AF_INET, align 4
  %17 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %5, i32 0, i32 2
  store i32 %16, i32* %17, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** @hostStruct, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i64*, i64** %19, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 0
  %22 = load i64, i64* %21, align 8
  %23 = inttoptr i64 %22 to i64*
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %5, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  store i64 %24, i64* %26, align 8
  %27 = load i32, i32* %3, align 4
  %28 = call i32 @htons(i32 %27)
  %29 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %5, i32 0, i32 0
  store i32 %28, i32* %29, align 8
  %30 = load i32, i32* %4, align 4
  %31 = bitcast %struct.sockaddr_in* %5 to %struct.sockaddr*
  %32 = call i64 @connect(i32 %30, %struct.sockaddr* %31, i32 24)
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %13
  %35 = load i32, i32* %4, align 4
  %36 = call i32 @close(i32 %35)
  %37 = load i32, i32* @CONNECT_ERR, align 4
  store i32 %37, i32* %2, align 4
  br label %40

38:                                               ; preds = %13
  %39 = load i32, i32* %4, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %38, %34, %11
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i64 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
